config dirs replaced for environment variables

--- a/app.ini
+++ b/app.ini
@@ -1,12 +1,10 @@
 [uwsgi]
-# http = 127.0.0.1:9999
-http = 0.0.0.0:9999
+http = 127.0.0.1:9999
 master = true
 processes = 8
 wsgi-file = app.py
-chdir = /home/disha/projects/test
-pythonpath =  /home/disha/projects/test
-# daemonize = /home/www/track/python/server.log
-touch-reload = /home/disha/projects/test/app.ini
+chdir = $(ROOT_DIR)
+pythonpath =  $(ROOT_DIR)
+touch-reload = $(ROOT_DIR)/app.ini
 stats = /tmp/teststat.sock
 pidfile = app.pid
